# aquinas-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  models  optimize_loop.sh  prompt_changelog.md  pyproject.toml  recommendations.toml  style_profile.yaml  verify_sources.py
.claude/: database.md  decisions.md  m0_setup.md  m1_resolution.md  m2_migration.md  m2_scale.md  m3_review.md  m4_quality.md  m4_sense.md  m4_translation.md  m5_data_driven_formula_constraints.md  m5_glossary_and_term_flow_plan.md  m5_hardening.md  m5_polish_pass_plan.md  multiword_formula_design.md  preamble_ingestion_plan.md  refactor_plan.md  server_concurrent_review_plan.md  settings.json  sources.md  xliff.md
db/: schema.sql
docs/: claude-corrections.md  pilot_sample_100.json  pilot_sample_200.json  session_state.md
docs/plans/: m5_glossary_and_term_flow_plan.md
migrations/: 001_initial.sql  002_schema_fixes.sql  003_term_category.sql  004_translation_status.sql  005_run_analytics.sql  006_sense_rendering_la_lang.sql  007_glossary_term_la_surface.sql  010_polish_source.sql  fix_lowercase_terms.py
migrations/archive/: 008_editor_table.sql  009_segment_review.sql  README.md
prompts/: polish_system.txt  reviewer_system.txt  translator_system.txt
reports/: latest_compare.txt  m1_provenance.txt  m2_api_stats.json  m2_coverage.txt  m2_english_gaps.txt  m2_latin_stats.json  m2_parser_anomalies.txt  m3_import_summary.txt  m4_pilot.txt  m4_sample.txt  m4_titles.txt  verify_2373.jsonl  verify_latin_fix.jsonl  verify_preamble_fix.jsonl  verify_prompt_fix.jsonl
scripts/: build_sample_200.py  install-hooks.sh  pre-commit  purge_capitalized_gap_terms.py  purge_habere_ppp_usage.py
src/: verify.py
src/acquire/: bahounek.py  dominican.py  download_models.py  freddoso.py  latin.py  steps.py  verify.py
src/common/: anthropic_client.py  corpus_db.py  db.py  deepseek.py  deepseek_client.py  glossary_repo.py  lemmatize.py  models.py  pricing.py  prompt_blocks.py
src/ingest/: coverage_report.py  db.py  gap_terms.py  glossary_repo.py  ingest_english.py  krystal.py  lemmatize.py  parser_bahounek.py  parser_latin.py  pipeline.py  report.py  report_m2.py  reset_gap_proposals.py  resolution.py  resolver.py  seed_formula_terms.py  sense_mining.py  source_parser.py  steps.py
src/optimize/: __init__.py  build_sample.py  optimize_loop.sh  pilot.py  polish_optimize_loop.sh  polish_prompt_changelog.md  reset_golden.py  run_compare.py
src/pipeline/: __init__.py  __main__.py  context.py  interactive.py  reporting.py  runner.py  step.py
src/polish/: batch.py  guards.py  polisher.py  steps.py
src/review/: export_sheet.py  import_approvals.py  sheets.py  steps.py
src/server/: app.py  db.py
tests/: _fakes.py  conftest.py  test_acquire_bahounek.py  test_acquire_dominican.py  test_acquire_freddoso.py  test_acquire_latin.py  test_verify_sources.py
(+74 files in other folders)
