[project]
name = "aquinas-pipeline"
version = "0.1.0"
description = "Summa Theologiae Latin → Slovak translation pipeline"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "lxml>=5.0",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "cltk>=1.4",
    "ufal.morphodita>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acquire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
