[project]
name = "aquinas-pipeline"
version = "0.1.0"
description = "Summa Theologiae Latin → Slovak translation pipeline"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "lxml>=5.0",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "cltk>=1.4",
    "ufal.morphodita>=1.11",
    "gspread>=6.0",
    "google-auth>=2.0",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "prefect>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acquire", "src/ingest", "src/review", "src/common", "src/server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["acquire", "common", "ingest", "review", "server", "translate", "verify"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
